# SecureCast

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SecureCast_통합_구현가이드.md  buildspec.json  ocr-engine.h  중간보고서_final.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md  task.md
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/workflows/: build-project.yaml  push.yaml  windows-build.yml
build-aux/: run-clang-format  run-gersemi
cmake/common/: buildspec_common.cmake
data/: downsample.effect  downsample_ocr.effect  securecast_blur.effect
data/locale/: en-US.ini
src/: gpu-readback.cpp  gpu-readback.h  ocr-engine.cpp  ocr-engine.h  overlay-window.cpp  overlay-window.h  pipeline-health.cpp  pipeline-health.h  pixel-hash.cpp  pixel-hash.h  plugin-main.cpp  plugin-support.c.in  plugin-support.h  securecast-filter.cpp  securecast-filter.h  securecast-types.h  selection-overlay.cpp  selection-overlay.h  visual-tracker.cpp  visual-tracker.h  win_event_listener.cpp  win_event_listener.h  window_tracker.cpp  window_tracker.h
test/: CMakeLists.txt  obs_stub.cpp  pii_corpus.txt  test_detect_pii.cpp  test_tracker.cpp
